Skolni pocitac - ctvrtek 11.4. - minimalni změny

--- a/src/projektjakubdrozdide16/Kviz.form
+++ b/src/projektjakubdrozdide16/Kviz.form
@@ -48,6 +48,11 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              <Component id="odpovedOtevrenaOtazka" min="-2" pref="71" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="160" max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -63,7 +68,9 @@
               <Component id="Odpoved2" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="Odpoved3" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="odpovedOtevrenaOtazka" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -102,6 +109,14 @@
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="NazevKvizu">
+    </Component>
+    <Component class="javax.swing.JTextField" name="odpovedOtevrenaOtazka">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="jTextField1"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="odpovedOtevrenaOtazkaActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
