--- a/src/projektjakubdrozdide16/UvodniObrazovka.form
+++ b/src/projektjakubdrozdide16/UvodniObrazovka.form
@@ -97,6 +97,9 @@
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="JmenoUzivateleTextField">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JmenoUzivateleTextFieldActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
