--- a/src/projektjakubdrozdide16/UvodniObrazovka.form
+++ b/src/projektjakubdrozdide16/UvodniObrazovka.form
@@ -24,7 +24,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <EmptySpace pref="104" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="104" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="VyberSouboruLabel" min="-2" max="-2" attributes="0"/>
